--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am the the next Tom Brady of Coding Bootcamp</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Little Rock, AR</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies are making music, cooking, and learning to code!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is the job that pays me a crazy amount of money to just be my innovate self.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in beautiful Austin, Texas</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to create something that will change the world</p>
     </section>
 
     <footer id="footer">
