--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>My favorite hobbies are making music, cooking, and learning to code!</p>
       <h1>What's your dream job?</h1>
-      <p>My dream job is the job that pays me a crazy amount of money to just be my innovate self.</p>
+      <p>My dream job is the job that pays me a crazy amount of money to just be my innovate self</p>
       <h1>Where do you live?</h1>
       <p>I live in beautiful Austin, Texas</p>
       <h1>Why do you want to be a web developer?</h1>
